--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -6,7 +6,6 @@
 nav {
   margin-bottom: 40px;
   box-shadow: 1px 1px 3px rgba(143, 142, 179, 0.2) !important;
-
   @media(max-width: 600px) {
     margin-bottom: 0;
   }
@@ -139,7 +138,6 @@ nav {
       padding-left: 20px;
       font-size: 1em;
       font-family: soleil, sans-serif;
-
       @media(max-width: 800px) {
         width: 150px !important;
       }
@@ -829,9 +827,8 @@ nav {
       font-family: soleil, sans-serif;
       font-weight: 300;
     }
-
     @media(max-width: 800px) {
-          width: 200px;
+      width: 200px;
     }
   }
 
@@ -985,7 +982,7 @@ nav {
       li {
         position: relative;
         height: 25px;
-            width: fit-content;
+        width: fit-content;
       }
 
       a {
@@ -996,7 +993,6 @@ nav {
         color: #505f77;
         font-weight: 500;
         transition: all 0.15s ease-out;
-
 
         &:hover {
           color: @theme-color;
@@ -1125,13 +1121,12 @@ nav {
   justify-content: space-between;
   max-width: 400px;
   margin: auto;
-
   @media(max-width: 600px) {
     display: none;
   }
 
   .dropdown {
-    transition: all .3s ease-out;
+    transition: all 0.3s ease-out;
     position: relative;
 
     &:hover {
@@ -1151,7 +1146,7 @@ nav {
       border: none;
       font-family: 'soleil', sans-serif;
       font-weight: 400;
-      font-size: .9em;
+      font-size: 0.9em;
       padding: 0;
       height: 45px;
       background: none;
@@ -1163,19 +1158,19 @@ nav {
       background: white;
       box-shadow: 0 3px 3px rgba(65, 67, 144, 0.15);
       z-index: 10;
-      width:200px;
+      width: 200px;
       position: absolute;
       opacity: 0;
       padding: 5px;
 
       a {
         display: block;
-        font-size: .8em;
+        font-size: 0.8em;
         padding: 10px;
         text-align: left;
         line-height: 1.5;
         color: @text-color;
-        transition: all .3s ease-out;
+        transition: all 0.3s ease-out;
         font-family: 'soleil', sans-serif;
         font-weight: 100;
 
@@ -1198,14 +1193,13 @@ nav {
 
   a {
     color: @text-color;
-    transition: all .3s ease-out;
+    transition: all 0.3s ease-out;
 
     &:hover {
       color: @theme-color;
       cursor: pointer;
     }
   }
-
   @media(max-width: 600px) {
     display: flex;
   }
