--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -9,21 +9,19 @@
 	transition: all 0.3s ease-out;
 
 	&:hover {
-		margin-top:-5px;
+		margin-top: -5px;
 		margin-bottom: 45px;
 		box-shadow: 0 20px 20px rgba(65, 67, 144, 0.3) !important;
 		cursor: pointer;
 	}
-
 	@media(max-width: 950px) {
-		 padding: 15px;
-		 margin-bottom: 20px;
+		padding: 15px;
+		margin-bottom: 20px;
 
 		&:hover {
 			margin-bottom: 25px;
 		}
 	}
-
 	@media(max-width:800px) {
 		margin-bottom: 30px;
 
@@ -31,13 +29,12 @@
 			margin-bottom: 35px;
 		}
 	}
-
 	@media(max-width:600px) {
 		margin-bottom: 20px;
 		padding: 10px 10px 15px;
 
 		&:hover {
-			margin-top:-5px;
+			margin-top: -5px;
 			margin-bottom: 25px;
 			cursor: pointer !important;
 			background: #90d1ff;
@@ -70,9 +67,7 @@
 			display: none;
 		}
 
-		p {
-
-		}
+		p {}
 
 		p:first-child {
 			display: -webkit-box;
@@ -112,9 +107,8 @@
 			border: 1px solid #e3edef;
 			height: auto;
 		}
-
 		@media(max-width: 600px) {
-			 margin: 0 auto;
+			margin: 0 auto;
 		}
 
 		.featured-image {
@@ -137,11 +131,9 @@
 			margin: 0 0 10px;
 			font-weight: 900;
 			font-family: 'ProductSans-Bold', 'soleil', sans-serif;
-
 			@media(max-width: 950px) {
-				 font-size: 1.8em;
+				font-size: 1.8em;
 			}
-
 			@media(max-width: 600px) {
 				font-size: 1.4em;
 				margin: 0 0 10px;
@@ -223,7 +215,6 @@
 		width: 100%;
 		justify-content: space-between;
 		max-width: 420px;
-
 		@media(max-width:1000px) {
 			justify-content: left;
 		}
@@ -242,7 +233,6 @@
 		.author-mobile {
 			display: none !important;
 			align-items: center;
-
 			@media(max-width: 800px) {
 				margin-right: 40px;
 			}
@@ -260,7 +250,7 @@
 				.mobile-name {
 					margin-bottom: 2px;
 					font-family: 'soleil', sans-serif;
-					letter-spacing: .2px;
+					letter-spacing: 0.2px;
 				}
 
 				.mobile-date {
@@ -308,7 +298,7 @@
 				align-items: center;
 
 				&:hover {
-					cursor:pointer;
+					cursor: pointer;
 					color: unset;
 				}
 
@@ -316,21 +306,19 @@
 					line-height: 1.2;
 					font-size: 13px;
 					font-family: 'soleil', sans-serif;
-
 					@media(max-width: 600px) {
 						font-size: 13px;
 						font-weight: 100;
 					}
 
-					&:hover{
-						cursor:pointer;
+					&:hover {
+						cursor: pointer;
 					}
 				}
 
 				i {
 					font-size: 22px;
 					height: 20px;
-
 					@media(max-width: 600px) {
 						order: 2;
 						font-size: 18px;
@@ -339,11 +327,11 @@
 					}
 
 					&:hover {
-						cursor:pointer;
+						cursor: pointer;
 					}
 				}
-				@media(max-width: 800px){
-					 order: 2;
+				@media(max-width: 800px) {
+					order: 2;
 				}
 				@media(max-width: 600px) {
 					font-size: 1em;
@@ -356,7 +344,6 @@
 
 			&.author,
 			&.author-mobile {
-
 				i {
 					color: @meta-color;
 					@media(max-width: 600px) {
@@ -391,7 +378,6 @@
 				&:hover {
 					cursor: pointer;
 				}
-
 				@media (max-width: 1000px) {
 					margin: auto 80px auto 0;
 				}
@@ -438,7 +424,7 @@
 		text-align: left;
 		display: flex;
 		justify-content: space-between;
-		padding: 7px 3px 7px;
+		padding: 7px 3px;
 		align-items: center;
 		border-top: 1px solid #e7e7e7;
 		transition: all 0.3s ease-out;
@@ -512,9 +498,8 @@
 
 .content {
 	padding: 0 5px;
-
-	@media(max-width: 600px){
-		 padding: 0 10px;
+	@media(max-width: 600px) {
+		padding: 0 10px;
 	}
 }
 
