--- a/src/less/global/variables.less
+++ b/src/less/global/variables.less
@@ -1,10 +1,10 @@
 /*====================================================
 	COLOR VARIABLE FOR THEME
 ====================================================*/
-@theme-color: #0db0e2;        // theme color
+@theme-color: #5eb9d7;        // theme color
 @secondary-color: #30b1a7;				// secondary theme color
 @hover-color: #40cebb;
-@button-color: #1f90b7;
+@button-color: #5eb9d7;
 @button-hover: #30b1a7;
 @button-shadow: #1d6e8e;
 @h1-color: #152952;
