--- a/src/less/pages/resources.less
+++ b/src/less/pages/resources.less
@@ -11,13 +11,13 @@
     margin: auto 40px 30px;
   }
 
-  #tablewrapper{
+  #tablewrapper {
     margin: auto 40px 40px;
     width: -webkit-fill-available;
   }
 
   #resources-table {
-    width:100%;
+    width: 100%;
 
     .icon {
       max-width: 5px;
@@ -40,8 +40,6 @@
           text-align: center !important;
         }
 
-
-
         .issuetype_icon {
           text-align: center !important;
           width: 25px;
@@ -50,7 +48,7 @@
 
         .summmary {
           font-weight: 600 !important;
-          font-size: .85em !important;
+          font-size: 0.85em !important;
         }
 
         .description {
@@ -58,7 +56,7 @@
         }
 
         .issuetype-name {
-          font-size: .8em !important;
+          font-size: 0.8em !important;
           min-width: 100px;
         }
 
