--- a/src/less/posts/article-preview.less
+++ b/src/less/posts/article-preview.less
@@ -8,17 +8,18 @@
   box-shadow: 0 0 5px rgba(80,82,204,.1) !important;
 
   &:hover {
-    margin-top:-5px;
+    margin-top: -5px;
     margin-bottom: 5px;
     box-shadow: 0 20px 20px rgba(65, 67, 144, 0.3) !important;
     cursor: pointer;
   }
-
   @media(max-width: 600px) {
     margin: 5px 0;
     width: 100%;
-    width: -moz-available;          /* WebKit-based browsers will ignore this. */
-    width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
+    width: -moz-available;
+    /* WebKit-based browsers will ignore this. */
+    width: -webkit-fill-available;
+    /* Mozilla-based browsers will ignore this. */
     width: fill-available;
     max-width: none;
     min-height: 100px;
