--- a/src/less/posts/languages/python.less
+++ b/src/less/posts/languages/python.less
@@ -1,12 +1,9 @@
-
-
 .post-content {
   .hljs {
-
     &.language-python,
     &.python {
       color: #e4f8fd;
-      background: #141e39;
+      background: #222b45;
 
       &::before {
         height: auto;
@@ -62,6 +59,6 @@
         font-weight: 600;
         font-family: 'Hack';
       }
-      }
+    }
   }
 }
