--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -5,7 +5,6 @@
 	/*====================================================
 		Main post area
 	====================================================*/
-
 	nav {
 		margin-bottom: 1px;
 	}
@@ -13,19 +12,16 @@
 	.post-footer {
 		width: 100%;
 		max-width: 100%;
-
 		@media(max-width: 800px) {
 			width: 100% !important;
 		}
 	}
 
 	.post-wrapper {
-
 		@media(max-width: 800px) {
 			width: 90%;
 			margin: 0 auto;
 		}
-
 		@media(max-width: 600px) {
 			width: 86%;
 			margin: 5px auto 30px;
@@ -61,11 +57,9 @@
 
 	.container {
 		padding: 0;
-
 		@media(max-width: 1200px) {
-			 width: 100%;
+			width: 100%;
 		}
-
 		@media(max-width: 800px) {
 			margin: 0 0 20px 0 !important;
 			width: 100% !important;
@@ -75,7 +69,6 @@
 			margin: 0 auto;
 			width: 100%;
 			background: white;
-
 			@media(max-width: 800px) {
 				margin: 0;
 				width: auto;
@@ -89,7 +82,6 @@
 		.featured-media {
 			line-height: 1;
 			margin: 20px 0 0;
-
 			@media(max-width: 800px) {
 				margin: 20px 0 0;
 			}
@@ -117,9 +109,8 @@
 		letter-spacing: 0;
 		line-height: 1.1;
 		color: @h1-color;
-
 		@media(max-width: 800px) {
-			margin: 10px 0 10px;
+			margin: 10px 0;
 			font-size: 2em;
 		}
 		@media(max-width: 600px) {
@@ -150,7 +141,6 @@
 		line-height: 1.3;
 		color: @h1-color;
 		font-family: 'ProductSans-Regular', sans-serif;
-
 		@media(max-width: 800px) {
 			margin: 10px 0 0;
 		}
@@ -160,14 +150,13 @@
 	}
 
 	h2 {
-	  margin: 40px 0 10px;
-    color: #555560;
+		margin: 40px 0 10px;
+		color: #555560;
 		line-height: 1.3;
 		font-family: 'ProductSans-Regular', sans-serif;
 		font-weight: 100!important;
 		font-size: 2em;
 		width: 100%;
-
 		@media(max-width: 800px) {
 			font-size: 1.9em;
 		}
@@ -188,11 +177,9 @@
 		color: #555560;
 		margin: 40px 0 10px;
 		font-family: 'ProductSans-Regular', sans-serif;
-
 		@media(max-width: 800px) {
 			font-size: 1.3em;
 		}
-
 		@media(max-width: 600px) {
 			text-align: left;
 			line-height: 1.3;
@@ -218,7 +205,6 @@
 		}
 	}
 
-
 	.sidebar {
 		display: none;
 	}
@@ -227,7 +213,6 @@
 		margin: 0 0 25px;
 		font-size: 1.05em;
 		line-height: 1.8em;
-
 		@media (max-width: 600px) {
 			text-align: left;
 			line-height: 1.8 !important;
@@ -258,7 +243,6 @@ article {
 		ul {
 			margin: 0 30px 20px;
 			padding-left: 0;
-
 			@media(max-width:600px) {
 				margin: 20px 15px 25px;
 				padding-left: 0;
@@ -268,7 +252,7 @@ article {
 				font-style: normal;
 				font-variant: normal;
 				text-rendering: auto;
-				margin: 0 0 10px 0;
+				margin: 0 0 10px;
 				padding-left: 0;
 				line-height: 1.7;
 				display: block;
@@ -289,7 +273,6 @@ article {
 					font-size: 9px;
 					margin-right: 9px;
 					font-weight: 500;
-
 					@media(max-width: 600px) {
 						margin-left: 0;
 					}
@@ -302,7 +285,6 @@ article {
 					li {
 						border-left: 1px solid rgba(77, 177, 212, 0.3);
 						padding: 0 0 20px 20px;
-						margin-left: 10px;
 						margin: 0 0 0 10px;
 
 						&:last-of-type {
@@ -324,7 +306,6 @@ article {
 		padding: 10px 0 15px;
 		margin: 0;
 		box-shadow: unset !important;
-
 		@media(max-width: 600px) {
 			padding: 10px 0 0;
 		}
@@ -358,7 +339,6 @@ article {
 				height: 33px !important;
 				padding: 8px 10px;
 				border-radius: 2px;
-
 				@media(max-width: 600px) {
 					height: 33px !important;
 					padding: 6px 8px;
@@ -491,7 +471,6 @@ article {
 }
 
 .post {
-
 	ol {
 		counter-reset: my-awesome-counter;
 
@@ -509,11 +488,10 @@ article {
 			}
 		}
 	}
-
 	/*   Start of Protip box */
 	.protip {
 		background: rgba(255, 222, 196, 0.42);
-	  	padding: 53px 20px 16px;
+		padding: 53px 20px 16px;
 		font-size: 0.96em;
 		overflow: hidden;
 		margin: 30px auto;
@@ -524,11 +502,10 @@ article {
 		color: #4c3100;
 		font-weight: 300;
 		box-shadow: -1px 1px 0 #f1ddce;
-
 		@media(max-width: 600px) {
 			padding: 50px 20px 15px !important;
 			line-height: 1.6;
-    		font-size: 0.9em;
+			font-size: 0.9em;
 		}
 
 		a {
@@ -554,10 +531,9 @@ article {
 			font-weight: 700;
 			top: 0;
 			left: 0;
-			right:0;
+			right: 0;
 			margin-left: unset;
 			margin-right: unset;
-
 			@media(max-width: 600px) {
 				padding: 5px 12px;
 			}
@@ -581,11 +557,11 @@ article {
 		}
 
 		pre > code {
-			 padding: 46px 19px 12px;
-			 border-radius: 0.3em;
- 			 white-space: normal;
- 		 	 background: #f1dbc6;
- 			 color: #8b572b;
+			padding: 46px 19px 12px;
+			border-radius: 0.3em;
+			white-space: normal;
+			background: #f1dbc6;
+			color: #8b572b;
 
 			&:before {
 				text-shadow: -1px 1px 1px rgba(46, 31, 0, 0.6) !important;
@@ -603,7 +579,6 @@ article {
 		}
 	}
 	/*  End of Protip box  */
-
 	/*  Start of Blockqoute  */
 	blockquote {
 		color: #aac0c8;
@@ -644,19 +619,18 @@ article {
 			background: #f0f0f0 !important;
 			padding: 3px 5px;
 			text-shadow: none !important;
-			font-size: .75em !important;
-
+			font-size: 0.75em !important;
 			@media(max-width: 600px) {
-				 margin: 0 auto;
+				margin: 0 auto;
 			}
 
-			&::before{
+			&::before {
 				background: rgba(128, 135, 149, 0.2) !important;
 				border-bottom: 0 !important;
 				text-shadow: unset !important;
 				color: #565656 !important;
-		    	mix-blend-mode: unset;
-		    	border-bottom: 0 !important;
+				mix-blend-mode: unset;
+				border-bottom: 0 !important;
 				margin-left: 0 !important;
 				margin-right: 0 !important;
 				width: 100%;
@@ -669,7 +643,7 @@ article {
 			}
 
 			.hljs-string {
-				 color: #52aa7e;
+				color: #52aa7e;
 			}
 		}
 
@@ -681,7 +655,6 @@ article {
 		}
 	}
 	/*     End of Blockqoute    */
-
 	/*     Start of Figcaption    */
 	figcaption {
 		width: -webkit-fill-available;
@@ -695,7 +668,6 @@ article {
 		white-space: normal;
 		line-height: 1.5;
 		border-top: 1px solid #e0e1e4;
-
 		@media(max-width: 600px) {
 			display: block;
 			width: auto !important;
@@ -737,12 +709,12 @@ article {
 
 	.subtext {
 		color: #a7a7a7;
-    font-style: italic;
-    font-weight: 100;
-    margin-bottom: 20px;
-    font-size: .85em;
-    display: block;
-    line-height: 1.4;
+		font-style: italic;
+		font-weight: 100;
+		margin-bottom: 20px;
+		font-size: 0.85em;
+		display: block;
+		line-height: 1.4;
 	}
 
 	figure {
@@ -758,7 +730,6 @@ article {
 		&:hover {
 			cursor: zoom-in;
 		}
-
 		@media(max-width: 600px) {
 			margin-left: calc(~"-50vw + 50%") !important;
 			margin-right: calc(~"-50vw + 50%") !important;
@@ -773,7 +744,6 @@ article {
 				width: 100%;
 				border-left: 0;
 				border-right: 0;
-
 				@media(max-width: 600px) {
 					margin-bottom: -5px !important;
 				}
@@ -786,7 +756,6 @@ article {
 
 		img {
 			width: 100%;
-
 			@media(max-width: 600px) {
 				margin-bottom: -5px !important;
 			}
