--- a/src/less/projects/kanban.less
+++ b/src/less/projects/kanban.less
@@ -28,11 +28,10 @@
     justify-content: space-between;
     margin-top: 20px;
     margin-bottom: 10px;
-
     @media(max-width: 1000px) {
-      display:block;
+      display: block;
     }
-/*
+    /*
     @media(max-width:600px){
       width: 410%;
     }*/
@@ -88,7 +87,6 @@
   }
 
   .main-content {
-
     .dropdown {
       border-radius: 3px;
       padding: 5px 10px;
@@ -121,10 +119,8 @@
   }
 
   .intro {
-
     h1 {
       margin: 10px 0 30px;
-
       @media(max-width: 800px) {
         margin: 30px 0 0;
       }
@@ -141,11 +137,11 @@
     display: block;
     overflow: hidden;
     height: 750px;
-
-    @media(max-width: 800px){
+    @media(max-width: 800px) {
       margin: 30px 0 50px;
       overflow: visible;
-      &:hover{
+
+      &:hover {
         cursor: grab;
       }
     }
@@ -159,7 +155,6 @@
       width: 100%;
       bottom: -50px;
       max-width: 150px;
-
       @media(max-width: 800px) {
         display: flex;
       }
@@ -169,11 +164,11 @@
         border: none;
         height: 11px;
         width: 11px;
-        opacity: .4;
+        opacity: 0.4;
         background: @theme-color;
-        padding:0;
+        padding: 0;
         text-indent: -9999px;
-        transition: all .3s ease-out;
+        transition: all 0.3s ease-out;
 
         &:hover {
           background: @hover-color;
@@ -191,13 +186,13 @@
       background: #fdfdfd;
       border: 1px solid #f9f9f9;
       position: relative;
-      max-width: 24%;
+      max-width: 98%;
       border-radius: 5px;
       box-shadow: 2px 3px 4px rgba(58, 59, 103, 0.1);
       overflow: hidden;
       display: inline-block;
       height: 740px;
-      margin: 0 2px 0 2px;
+      margin: 0 2px;
 
       &:first-child {
         margin-left: 0;
@@ -294,7 +289,7 @@
         margin: auto;
 
         &:nth-child(n+7) {
-            display:none;
+          display: none;
         }
 
         &.last-child {
@@ -316,7 +311,7 @@
           }
 
           h5 {
-            font-size: .9em;
+            font-size: 0.9em;
             line-height: 1.2;
             text-transform: capitalize;
             font-family: 'soleil', sans-serif !important;
@@ -441,7 +436,7 @@
               padding: 6px 7px;
 
               i {
-                opacity: .7;
+                opacity: 0.7;
               }
 
               span {
@@ -451,7 +446,7 @@
                 font-weight: 300;
                 margin-right: 0;
                 line-height: 1;
-                opacity: .8;
+                opacity: 0.8;
               }
             }
           }
