--- a/src/less/projects/projects-page.less
+++ b/src/less/projects/projects-page.less
@@ -17,9 +17,8 @@
   .main-content {
     box-shadow: 0 0 5px rgba(65,67,144,.15);
     background: white;
-    padding: 30px 40px 30px;
+    padding: 30px 40px;
     width: auto;
-
     @media(max-width: 600px) {
       padding: 3px 30px 20px;
     }
