--- a/src/less/etc/error.less
+++ b/src/less/etc/error.less
@@ -1,6 +1,7 @@
 @import '../global/variables.less';
 
-html,body {
+body,
+html {
   width: 100%;
   height: 100%;
   margin: 0;
@@ -27,10 +28,10 @@ header {
   position: relative;
   min-width: 100%;
   height: 1000px;
-  background: url('https://hackers.nyc3.cdn.digitaloceanspaces.com/img/nothing_to_see_here_naked_gun.gif') #000 no-repeat center center fixed;
+  background: url("https://hackers.nyc3.cdn.digitaloceanspaces.com/img/nothing_to_see_here_naked_gun.gif") #000 no-repeat center center fixed;
   background-size: cover;
   background-color: #000;
-  opacity: .8;
+  opacity: 0.8;
   margin: 0;
 
   .content {
@@ -52,7 +53,6 @@ header {
     height: 120px;
     text-shadow: -3px 3px 0 #404767, 0 1px 0 #404767, 1px -1px 0 #404767, -1px -1px 0 #404767;
     font-size: 160px;
-
     @media(max-width: 600px) {
       font-size: 120px;
     }
@@ -65,7 +65,6 @@ header {
     width: 90%;
     color: white !important;
     text-shadow: -2px 2px 0 #404767, 0 1px 0 #404767, 1px -1px 0 #404767, -1px -1px 0 #404767;
-
   }
 
   p {
@@ -84,8 +83,7 @@ header {
     margin-bottom: 10px;
     color: white !important;
     background: rgba(255, 255, 255, 0.25);
-    transition: all .2s ease-out;
-
+    transition: all 0.2s ease-out;
     @media(max-width: 600px) {
       background-color: white;
       color: #444444;
