--- a/src/less/etc/series.less
+++ b/src/less/etc/series.less
@@ -1,7 +1,6 @@
 @import "../global/variables.less";
 
 .series-template {
-
   nav {
     @media(max-width: 800px) {
       margin-bottom: 20px;
@@ -14,7 +13,6 @@
       margin: 0 auto 20px;
       padding: 0;
     }
-
     @media (max-width: 600px) {
       width: 100%;
       margin: 20px auto;
@@ -95,11 +93,10 @@
     margin-bottom: 20px;
     background: #ffffff;
     box-shadow: 0 0 5px rgba(65, 67, 144, 0.15);
-    padding: 12px 12px;
+    padding: 12px;
     align-items: center;
     justify-content: flex-end;
-    transition: all .3s ease-out;
-
+    transition: all 0.3s ease-out;
     @media(max-width: 800px) {
       padding: 7px 12px;
     }
@@ -131,10 +128,9 @@
 
       span {
         font-family: 'soleil', sans-serif;
-
-         @media(max-width: 800px) {
-           font-size: 16px;
-         }
+        @media(max-width: 800px) {
+          font-size: 16px;
+        }
       }
     }
   }
@@ -146,7 +142,6 @@
     padding: 20px;
     border-bottom: solid 1px #dadada;
     transition: all 0.2s ease-out;
-
     @media(max-width: 600px) {
       padding: 15px;
     }
@@ -155,8 +150,8 @@
       cursor: pointer;
 
       * {
-          cursor: pointer;
-        }
+        cursor: pointer;
+      }
     }
 
     &:last-child {
@@ -172,7 +167,6 @@
       height: auto;
       width: auto;
       position: relative;
-
       @media(max-width: 600px) {
         max-width: 115px;
         height: 100% !important;
@@ -238,12 +232,10 @@
             font-size: 1em;
             transition: all 0.2s ease-out;
             color: #334652;
-
             @media(max-width: 600px) {
               font-family: 'ProductSans-Regular',sans-serif;
               font-size: 0.9em;
             }
-
             @media(max-width: 400px) {
               font-size: 0.8em;
             }
@@ -339,12 +331,10 @@
       display: block;
       max-width: 326px;
       overflow: hidden;
-
       @media(max-width: 600px) {
         max-width: 40%;
         height: 110px;
       }
-
       @media(max-width: 400px) {
         height: 72px;
       }
