--- a/src/less/posts/about-author.less
+++ b/src/less/posts/about-author.less
@@ -1,5 +1,3 @@
-
-
 .about-author {
   background: @white;
   padding: 40px 60px;
@@ -9,11 +7,9 @@
   margin: 20px auto;
   justify-content: space-between;
   display: flex;
-
   @media(max-width: 800px) {
     margin: 20px 0;
   }
-
   @media(max-width: 600px) {
     padding: 30px;
   }
@@ -34,7 +30,6 @@
       width: 80px;
       height: 80px;
       margin: 0 15px 15px 0;
-
     }
 
     img {
@@ -45,7 +40,6 @@
   .details {
     display: inline-block;
     float: left;
-
 
     span {
       display: block;
@@ -115,7 +109,7 @@
   .name {
     font-family: 'soleil', sans-serif;
     color: #5D6178;
-    font-size: .9em;
+    font-size: 0.9em;
     font-weight: 600;
   }
 
@@ -126,7 +120,6 @@
     width: 100%;
     margin: 13px 0;
 
-
     & > span {
       display: inline-block;
       color: #868892;
@@ -134,13 +127,12 @@
       margin-right: 40px;
       margin-bottom: 0;
       font-weight: 100;
-
       @media(max-width: 800px) {
         margin-right: 30px;
       }
 
       .copy {
-        opacity: .8;
+        opacity: 0.8;
         display: inline-block;
         margin-bottom: 0;
       }
@@ -154,7 +146,7 @@
         font-weight: 100;
 
         &:hover {
-          color:@hover-color;
+          color: @hover-color;
         }
       }
     }
