--- a/src/less/posts/galleries.less
+++ b/src/less/posts/galleries.less
@@ -16,21 +16,21 @@
     box-shadow: 1px 0 1px rgba(154, 154, 165, 0.27);
 
     a {
-      transition: all .3s ease-out;
+      transition: all 0.3s ease-out;
 
       &:hover {
-        opacity: .7;
+        opacity: 0.7;
         cursor: zoom-in;
+      }
     }
-  }
 
     img {
-    display: block;
-    margin: 0;
-    width: 100%;
-    height: 100%;
+      display: block;
+      margin: 0;
+      width: 100%;
+      height: 100%;
+    }
   }
-}
 
   .kg-gallery-row:not(:first-of-type) {
     margin: 0.75em 0 0;
