swapped project icons

--- a/src/less/projects/picker.less
+++ b/src/less/projects/picker.less
@@ -111,6 +111,11 @@
     width: 100%;
     border-radius: 4px;
     box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.2);
+
+    .project-icon {
+        width: 20px;
+        margin-right: 5px;
+    }
   }
 
   .dropdown .dropdown-list {
