fixing full width code snippet font size

--- a/partials/pagination.hbs
+++ b/partials/pagination.hbs
@@ -13,7 +13,7 @@
 		{{/if}}
 	</div>
 	{{!-- Placeholder for number of total pages --}}
-	<div class="total-count">of <span id="page-total">{{pages}}</span></div>
+	<div style="display:none;" class="total-count">of <span id="page-total">{{pages}}</span></div>
 </section>
 
 <script>
