--- a/src/less/global/tags.less
+++ b/src/less/global/tags.less
@@ -176,11 +176,11 @@
   }
 
   .flask {
-    color: #506398 !important;
-    background-color: #d3dbe8;
+    color: #505d7f !important;
+    background-color: #e4e7ed;
 
     * {
-      color: #506398 !important;
+      color: #505d7f !important;
     }
   }
 
