--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -369,11 +369,11 @@
 		}
 
 		.building-flask-apps svg {
-			fill: @pandas-color;
+			fill: #4d5056;
 		}
 
 		.data-analysis-pandas i {
-			color: @flask-color;
+			color: @pandas-color;
 		}
 
 		.code-snippet-corner svg {
