--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -225,6 +225,10 @@ blockquote pre {
   @media(max-width: 600px) {
     margin-left: calc(-50vw + 50%) !important;
     margin-right: calc(-50vw + 50%) !important;
+
+    code {
+      font-size: 0.7em;
+    }
   }
 
   code {
