fixing full width code snippet font size

--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -51,7 +51,7 @@ blockquote pre {
       font-size: 0.8em;
       @media(max-width: 600px) {
         overflow-y: hidden;
-        font-size: 0.7em;
+        font-size: 12px;
       }
     }
 
@@ -227,12 +227,12 @@ blockquote pre {
     margin-right: calc(-50vw + 50%) !important;
 
     code {
-      font-size: 0.7em;
+      font-size: 12px;
     }
   }
 
   code {
-    font-size: 0.7em;
+    font-size: 12px;
   }
 }
 
